ops/servicemesh/flow-control/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-control
  labels:
    app: flow-control
spec:
  selector:
    app: flow-control
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flow-control
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: flow-control
    spec:
      containers:
      - name: flow-control
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
