ops/servicemesh/flow-control/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flow-control
  labels:
    app: flow-control
spec:
  host: flow-control
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
        connectTimeout: 300ms
      http:
        http1MaxPendingRequests: 10
