ops/servicemesh/flow-control/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flow-control-gateway-vs
  labels:
    app: flow-control
spec:
  hosts:
  - "flow-control.frieza.local"
  gateways:
  - flow-control-gateway
  http:
  - match:
    - uri:
        prefix: /sleep
    route:
    - destination:
        host: flow-control
